# sandbox

./: .gitignore  .gitmodules  README.md
arduino/helpers/: Array.h  EventLoop.h  StepperMotor.h  mockstd.h  move.h  serial_assert.h
arduino/string/: StaticString.h  StringTracker.h  string.ino
bash-completion/: setup.bash
bash-completion/completions/: bar  foo  xm
bash-completion/tests/: arginspect.py  manual_test.py  pprintable.py  testutil.py  tst_bar.py  tst_experimental.py  tst_foo.py
bash/ffmpeg/: Makefile  crop.bash  dimensions.bash  vsplit.bash
blender/: doughnut.blend
bug-reports/2021-02-clang-crash/: README.md  minimal-creduce.cpp  minimal-manual-1.cpp  minimal-manual-2.cpp
c/data-structures/: setup.py  test_cdatastruct.py
c/debug-print/: Makefile  debug-print.h  main.c
c/elf/: .gitignore  Makefile  demo.c  main.c  minireadelf.c  runtime-address.c
c/floating-point/: Makefile  float.c  float.h  main.c
c/mpi/: .gitignore  Makefile  hello.c  no-mpi-calls.c  ping_pong.c
c/names/: names.c
c/pi-pico/: CMakeLists.txt
c/pi-pico/cmake/: find_pico_sdk.cmake
c/pi-pico/gpio_timing/: CMakeLists.txt  gpio_timing.c
c/pi-pico/heartlight/: CMakeLists.txt  heartlight.c  heartlight.cpp
c/pi-pico/stepper-motor-a4988/: A4988.h  CMakeLists.txt  main.cpp
c/socket/client-server/: CMakeLists.txt  client.c  multiserver.c  server.c
c/udev/interception/homeswap/: CMakeLists.txt  homeswap.c  homeswap.yaml  printevent.c
chromeapp/helloworld/: window.html
chromeapp/sprite/: index.html  slider-play-2.html  slider-play.html  tmp.html
cmake/configure_file/: CMakeLists.txt
cmake/install/Foo/: CMakeLists.txt
cmake/install/Foo/cmake/: FooConfig.cmake
cmake/install/Foo/src/: A.h
cmake/install/WithComponents/: CMakeLists.txt
cmake/install/WithComponents/cmake/: WithComponentsConfig.cmake  WithComponents_BaseConfig.cmake  WithComponents_TelephoneConfig.cmake
cmake/install/WithComponents/src/Base/: A.cpp  B.cpp  B.h
cmake/install/WithComponents/src/Email/: Email.cpp  Email.h
cmake/install/WithComponents/src/Telephone/: Telephone.cpp  Telephone.h
cmake/string_to_list/: CMakeLists.txt
cpp/: test_harness.h
cpp/BitSet/: AtIterator.h  BitSet.h
cpp/CircularBuffer/: .gitignore  AtIterator.h  CircularBuffer.h  Makefile  main.cpp  tst_CircularBuffer.cpp
cpp/Counter/: Counter.h  Makefile  main.cpp
cpp/casadi/: CMakeLists.txt
cpp/casadi/apps/: book-ex-1.1.cpp  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  nlpsol-introspect.cpp
cpp/casadi/cmake/: Findcasadi.cmake
cpp/cliparser/: CMakeLists.txt  todo.md
cpp/cliparser/src/: CliParser.h
cpp/cliparser/tests/: FunctionalTests.cpp  UnitTests.cpp  test_helpers.h
cpp/eigen/cubic-spline/: CMakeLists.txt  Cubic.h  CubicSpline.h  CubicSplineSequence.h  cubic_spline.cpp
cpp/fcl0.5/: CMakeLists.txt  Mesh.cpp  Mesh.h  mesh_collision.cpp
cpp/itk/nrrd-file/: CMakeLists.txt  iminfo.cpp  read.cpp
cpp/json/: CMakeLists.txt  empty_array.cpp  only_included.cpp  unsigned.cpp
cpp/ompl/GeometricPlanning/: CMakeLists.txt  GeometricPlanning.cpp
cpp/package-managers/hunter/lefticus-example/: CMakeLists.txt  main.cpp
cpp/plotting/matplotlib/: CMakeLists.txt  cubic_spline.cpp  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp  ex06.cpp  ex07.cpp  make_image.cpp
cpp/python-binding/pybind11/cliparser/: CMakeLists.txt  cliparser_bindings.cpp
cpp/python-binding/pybind11/struct-autogen/cppyy/: A.hpp  CMakeLists.txt  expected.cpp  gen_pybind11.py
cpp/qt/controller-pipeline/: CMakeLists.txt  README.md
cpp/qt/controller-pipeline/src/: Controller.cpp  Controller.h  FakeReader.cpp  FakeReader.h  LocalizingFilter.cpp  LocalizingFilter.h  Logger.cpp  Logger.h  Registrar.cpp  Registrar.h  main.cpp
cpp/qt/gamepad/my-qgamepad/: CMakeLists.txt  Gamepad.h  main.cpp
cpp/qt/gamepad/my-qgamepad/gamepad/: .gitignore  Makefile  gamepad.h
cpp/qt/mismatched-signal-slot/: CMakeLists.txt
cpp/qt/mismatched-signal-slot/src/: MessageTypes.h  Receiver.h  Sender.h  main.cpp
cpp/qt/serial-port/hello_world/: CMakeLists.txt  main.cpp
cpp/qt/serial-port/serial-parser/: CMakeLists.txt  MessageGenerator.cpp  MessageGenerator.h  MessageParser.cpp  MessageParser.h  SerialCommunicator.cpp  SerialCommunicator.h  main.cpp
cpp/sfinae/FunctionTimer/: CMakeLists.txt  FunctionTimer.h  returns_void.cpp  returns_void.h  time_function_call.h  time_functions.cpp
cpp/tree/: CMakeLists.txt  stackless-tree-traversal.cpp
cpp/voxel-collision/: AbstractVoxelOctree.cpp  AbstractVoxelOctree.h  CMakeLists.txt  CTSparseVoxelObject.h  CTVoxelObject.h  CTVoxelOctree.h  CTVoxelOctree.hxx  CTVoxelOctreeWrap.h  CTVoxelOctreeWrap.hxx  DerivedVoxelOctree.h  DerivedVoxelOctree.hxx  Makefile  OctomapWrap.h  SparseVoxelObject.h  VoxelObject.h  VoxelOctree.cpp  VoxelOctree.h  VoxelOctree.hxx  VoxelOctreeUnion.h  VoxelOctreeUnion.hxx  collides.cpp  collides.h  main.cpp
cpp/voxel-collision/detail/: TreeNode.h  TreeNode.hxx
docker/: .gitignore  run-gitlab.sh
jupyter/: flit-svm.ipynb  graphviz.ipynb  ipywidgets-recursion.ipynb  ipywidgets.ipynb  mnist-sandbox-1.ipynb
make/: logging.mk  multitarget.mk  patsubst.mk  wildcard.mk
meson/tutorial/03-install/: meson.build  prog.c
openscad/: .gitignore  helpers.scad  ian-3dprinter-notes.md
python/: OptionalWriter.py  template.py
ros2/rviz2/: CMakeLists.txt  package.xml
ros2/rviz2/include/collision/: Capsule.h  CapsuleSequence.h  Point.h  Sphere.h  collision.h  collision_primitives.h
ros2/rviz2/src/: Mesh.cpp  Mesh.h  basic_shapes.cpp  interactive_simple_marker.cpp  mesh_marker.cpp  moving_camera_frame.cpp  points_and_lines.cpp  stl_io.h  triangle_mesh_marker.cpp  view_tendon.cpp
rust/bevy/first_game/: Cargo.toml
rust/bevy/first_game/src/: main.rs
rust/zenva-courses/build-your-first-game-with-rust-and-bevy/my_pong/: Cargo.toml
rust/zenva-courses/build-your-first-game-with-rust-and-bevy/my_pong/src/: bundles.rs  components.rs  constants.rs  main.rs
rust/zenva-courses/build-your-first-game-with-rust-and-bevy/my_pong/src/systems/: ball.rs  camera.rs  collision.rs  mod.rs  scoreboard.rs  windows.rs
(+1011 files in other folders)
