[package]
name = "my_pong"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimizations in the dev profile
[profile.dev]
opt-level = 1

# Enable a large amount of optimizations in thhe dev profile for dependencies
[profile.dev.package."*"]
opt-level = 3

# Used clang's lld linker
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
rand = "0.8.5"
